--- a/public/style.css
+++ b/public/style.css
@@ -1,8 +1,10 @@
 /* :root variables */
 :root {
     --board-size: 300px;
+    --cell-size: calc(var(--board-size) / 3 - 4px);
 }
 
+/* common */
 * {
     margin: 0;
     padding: 0;
@@ -22,4 +24,16 @@
     width: var(--board-size);
     height: var(--board-size);
     background-color: #29aecf;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+/* cells (board) */
+.cell {
+    width: var(--cell-size);
+    height: var(--cell-size);
+    border: 2px solid white;
+    font-size: xx-large;
 }
