--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Fredoka&display=swap');
+
 /* :root variables */
 :root {
     --board-size: 300px;
@@ -9,6 +11,10 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+}
+
+body {
+    font-family: 'Fredoka', sans-serif;
 }
 
 /* wrapper */
@@ -36,4 +42,6 @@
     height: var(--cell-size);
     border: 2px solid white;
     font-size: xx-large;
+    text-align: center;
+    line-height: var(--cell-size);
 }
