--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -11,6 +11,14 @@ body {
     font-family: 'Fredoka', sans-serif;
 }
 
+.flexible {
+    display: flex;
+}
+
+.half-width {
+    width: 50%;
+}
+
 /* status bar */
 .title {
     margin: 10px 0;
@@ -94,4 +102,61 @@ body {
     padding: 15px;
     background-color: white;
     border-radius: 50%;
+}
+
+/* config modal */
+.modal {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #fff4;
+
+    display: none;
+    justify-content: center;
+    align-items: center;
+}
+
+.config-form {
+    width: 400px;
+    background-color: #fff;
+    border: 1px solid #ebebeb;
+    padding: 50px 40px;
+    box-shadow: 5px 10px 39px #e1e1e1;
+}
+
+.config-form>* {
+    width: 100%;
+    margin: 8px auto;
+}
+
+.config-form :is(input, button) {
+    padding: 8px 12px;
+}
+
+.config-form>.flexible {
+    justify-content: space-between;
+}
+
+.config-form>*>.half-width {
+    width: calc(50% - 5px);
+}
+
+.config-form>button {
+    width: 100px;
+    margin-bottom: 0;
+    border: none;
+    border-radius: 1em;
+    font-weight: bold;
+}
+
+.config-form>button[type="reset"] {
+    background-image: linear-gradient(#e4e4e4, #e2e2e2);
+    color: #555555;
+}
+
+.config-form>button[type="submit"] {
+    background-image: linear-gradient(#006781, #29aecf);
+    color: white;
 }
